# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Apparently, python doesn't like it when you put a set of comments in front
  of an elif. Thanks to Robin Johnson <robbat2@gentoo.org> for pointing it out
  and the patch.

  13 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Huge refactoring of modules/generic_stage_target.py to fix indentation and
  generally clean up the code so it's a bit easier to read/follow.

  13 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Sort and de-dupe myusevars

  13 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Modify stage1-chroot.sh to use the actual -d/--debug code already in catalyst.

  13 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, targets/embedded/embedded-chroot.sh,
  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage4/stage4-chroot.sh, targets/support/chroot-functions.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  Move export of FEATURES to setup_myfeatures.

  12 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/stage1/stage1-chroot.sh:
  Added some debug code to stage1 and fixed a nice bug where we weren't
  building with the correct USE. Unfortunately, this invalidates any caches
  for stage1, since we were building with the entire USE from the profile.
  This is 2.0.6_pre4 for testing.

  11 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  We don't need to do the device building twice, so removing USE=build from
  first baselayout install.

  09 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh: